# pebbl

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_simple.txt  Doxyfile  NOTICE  README.md  showcase.pbl  test.pbl
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  clang-format.yml  doxygen.yml  tests.yml
docs/html/: annotated.html  ast_8hpp.html  ast_8hpp__dep__incl.map  ast_8hpp__dep__incl.md5  ast_8hpp__incl.map  ast_8hpp__incl.md5  ast_8hpp_source.html  ast__generator_8cpp.html  ast__generator_8cpp__incl.map  ast__generator_8cpp__incl.md5  ast__generator_8hpp.html  ast__generator_8hpp__dep__incl.map  ast__generator_8hpp__dep__incl.md5  ast__generator_8hpp__incl.map  ast__generator_8hpp__incl.md5  ast__generator_8hpp_source.html  chunk_8cpp.html  chunk_8cpp__incl.map  chunk_8cpp__incl.md5  chunk_8h_source.html  chunk_8hpp.html  chunk_8hpp__dep__incl.map  chunk_8hpp__dep__incl.md5  chunk_8hpp__incl.map  chunk_8hpp__incl.md5  chunk_8hpp_source.html  classASTGenerator-members.html  classASTGenerator.html  classASTGenerator__coll__graph.map  classASTGenerator__coll__graph.md5  classChunk-members.html  classChunk.html  classGCHeap-members.html  classGCHeap.html  classGCHeap__coll__graph.map  classGCHeap__coll__graph.md5  classLexer-members.html  classLexer.html  classRootHandle-members.html  classRootHandle.html  (+296 more)
docs/html/search/: all_0.js  all_1.js  (+100 more)
docs/latex/: annotated.tex  ast_8hpp.tex  ast_8hpp__dep__incl.md5  ast_8hpp__incl.md5  ast_8hpp_source.tex  ast__generator_8cpp.tex  ast__generator_8cpp__incl.md5  ast__generator_8hpp.tex  ast__generator_8hpp__dep__incl.md5  ast__generator_8hpp__incl.md5  ast__generator_8hpp_source.tex  chunk_8cpp.tex  chunk_8cpp__incl.md5  chunk_8h_source.tex  chunk_8hpp.tex  chunk_8hpp__dep__incl.md5  chunk_8hpp__incl.md5  chunk_8hpp_source.tex  classASTGenerator.tex  classASTGenerator__coll__graph.md5  classChunk.tex  classGCHeap.tex  classGCHeap__coll__graph.md5  classLexer.tex  classRootHandle.tex  classRootHandle__coll__graph.md5  classTracer.tex  classTracer__coll__graph.md5  classVM.tex  common_8h_source.tex  common_8hpp.tex  common_8hpp__dep__incl.md5  common_8hpp__incl.md5  common_8hpp_source.tex  conceptGCManaged.tex  conceptIsOpcode.tex  concepts.tex  debug_8cpp.tex  debug_8cpp__incl.md5  debug_8h_source.tex  (+139 more)
interpreter/bytecode/: chunk.c  chunk.cpp  chunk.h  chunk.hpp  opcodes.hpp  opcodes.inc
interpreter/runtime/: value.c  value.h  value.hpp  vm.c  vm.cpp  vm.h  vm.hpp
parser/ast_generation/: ast.hpp
parser/lexer/: lexer.cpp  lexer.hpp  tokens.hpp
src/: common.hpp  main.cpp
src/runtime/: gc.cpp  gc.hpp
src/utils/: common.hpp  debug.cpp  debug.hpp
utils/: common.h  debug.c  debug.cpp  debug.h  debug.hpp  memutils.h
(+24 files in other folders)
